Rename HUSL -> HSLuv

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: csharp
-solution: HUSL.sln
+solution: Hsluv.sln
 install:
-  - nuget restore HUSL.sln
+  - nuget restore Hsluv.sln
   - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
 script:
-  - xbuild /p:Configuration=Release HUSL.sln
-  - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./HUSLTest/bin/Release/HUSLTest.dll
+  - xbuild /p:Configuration=Release Hsluv.sln
+  - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./HsluvTest/bin/Release/HsluvTest.dll
 
