--- a/HsluvTest/HsluvTest.csproj
+++ b/HsluvTest/HsluvTest.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0857E080-623E-4183-BC67-8A751364CB1E}</ProjectGuid>
+    <ProjectGuid>{B7BEA0A9-025E-4738-85DE-A223CF9C3E8D}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>HUSL</RootNamespace>
-    <AssemblyName>HUSL</AssemblyName>
+    <RootNamespace>HsluvTest</RootNamespace>
+    <AssemblyName>HsluvTest</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -29,10 +29,32 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="nunit.framework, Version=2.6.3.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
+      <Package>nunit</Package>
+    </Reference>
+    <Reference Include="nunit.core, Version=2.6.3.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
+      <Package>nunit</Package>
+    </Reference>
+    <Reference Include="nunit.util, Version=2.6.3.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
+      <Package>nunit</Package>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ColorConverter.cs" />
+    <Compile Include="ColorConverterTest.cs" />
+    <Compile Include="MiniJSON.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\Hsluv\Hsluv.csproj">
+      <Project>{0857E080-623E-4183-BC67-8A751364CB1E}</Project>
+      <Name>Hsluv</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\JSONSnapshotRev3.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
 </Project>
