Use updated rev3 snapshot

--- a/HsluvTest/HsluvTest.csproj
+++ b/HsluvTest/HsluvTest.csproj
@@ -52,7 +52,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\JSONSnapshotRev3.txt" />
+    <EmbeddedResource Include="Resources\JsonSnapshotRev3.txt" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
