Debug Travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: csharp
 script:
+  - find .
   - stat HsluvTest/Resources/JsonSnapshotRev3.txt
   - mcs HsluvTest/HsluvConverterTest.cs HsluvTest/MiniJSON.cs Hsluv/Hsluv.cs -resource:HsluvTest/Resources/JsonSnapshotRev3.txt,JsonSnapshotRev3 -main:HsluvTest.HsluvConverterTest
   - mono ./HsluvTest/HsluvConverterTest.exe
