Migrate to .NET Standard & Revision 4

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
 language: csharp
 script:
-  - mcs HsluvTest/HsluvConverterTest.cs HsluvTest/MiniJSON.cs Hsluv/Hsluv.cs -resource:HsluvTest/snapshot-rev3.json,JsonSnapshotRev3 -main:HsluvTest.HsluvConverterTest
-  - mono ./HsluvTest/HsluvConverterTest.exe
+  - dotnet test -c Release
