--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,5 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: mcs HsluvTest/HsluvConverterTest.cs HsluvTest/MiniJSON.cs Hsluv/Hsluv.cs -resource:HsluvTest/snapshot-rev3.json,JsonSnapshotRev3 -main:HsluvTest.HsluvConverterTest
-      - run: mono ./HsluvTest/HsluvConverterTest.exe
+
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v3
+       
+      - name: Test
+        run: dotnet test -c Release
